# TAFFO-submodule-conv

./: .gitignore  CMakeLists.txt  README.md  result.txt
LLVMFloatToFixed/: Annotations.cpp  ArcSinCos.cpp  CMakeLists.txt  ConstantConversion.cpp  Conversion.cpp  FixedPointType.cpp  FixedPointType.h  FixedPointTypeOverlay.cpp  FixedPointTypeOverlay.h  FloatTypeOverlay.cpp  FloatTypeOverlay.h  IndirectCallConversion.cpp  InstructionConversion.cpp  LLVMFloatToFixedPass.cpp  LLVMFloatToFixedPass.h  MDCollector.cpp  SinCos.cpp  SinCos.h  TAFFOMath.cpp  TAFFOMath.h  TypeOverlay.cpp  TypeOverlay.h
test/: VRA.txt  a  a.1.magiclangtmp.ll  a.2.magiclangtmp.ll  a.3.magiclangtmp.ll  a.4.magiclangtmp.ll  a.5.magiclangtmp.ll  array3.c  calculator  function.c  inlinetest.c  magiclang.sh  magiclang2.sh  magiclang2_float.sh  result.txt  simple.c  test1.c  test1.ll  test3.c  test3.ll
test/NPB3.0-omp-C-master/: .gitignore  collect_stats.sh  test.sh
test/NPB3.0-omp-C-master/BT/: Makefile  bt.c  header.h
test/NPB3.0-omp-C-master/CG/: Makefile  cg.c
test/NPB3.0-omp-C-master/EP/: Makefile  ep.c
test/NPB3.0-omp-C-master/FT/: Makefile
test/NPB3.0-omp-C-master/IS/: Makefile
test/NPB3.0-omp-C-master/LU/: Makefile  applu.h  lu.c
test/NPB3.0-omp-C-master/MG/: Makefile
test/NPB3.0-omp-C-master/SP/: Makefile  header.h  sp.c
test/NPB3.0-omp-C-master/config/: make.def
test/NPB3.0-omp-C-master/sys/: Makefile  make.common  setparams.c
test/NPB3.0-omp-C/config/: make.def  suite.def
test/SNU_NPB-1.0.3/NPB3.3-SER-C/config/: make.def  suite.def
test/axbench/blackscholes/: Makefile  run.sh
test/axbench/fft/: Makefile  run.sh
test/axbench/fft/src/: fourier.cpp
test/axbench/inversek2j/: Makefile
test/axbench/jmeint/: Makefile
test/axbench/jpeg/: Makefile
test/axbench/sobel/: Makefile
test/polybench-3.1/: .gitignore  HELP.txt  autotune.py  chkval_datamining.sh  chkval_everything.sh  chkval_everything_better.py  chkval_linear-algebra_kernels.sh  chkval_linear-algebra_solvers.sh  chkval_medley.sh  chkval_stencils.sh  common_chkval.sh  common_compile.sh  compile_atax.sh  compile_datamining.sh  compile_everything.sh  compile_flwa.sh  compile_linear-algebra_kernels.sh  compile_linear-algebra_solvers.sh  compile_medley.sh  compile_stencil.sh  fixedpoint.sh  magiclang.sh  resultdiff.py  run_experiment.sh
test/polybench-c-4.2.1-beta/: allinststat.py  autotune.py  common_compile.sh  compile_datamining.sh  compile_everything.sh  compile_linear-algebra_blas.sh  compile_linear-algebra_kernels.sh  compile_linear-algebra_solvers.sh  compile_medley.sh  compile_stencil.sh  run_conf.sh
tool/: CMakeLists.txt  istr_type.cpp
(+69 files in other folders)
